# pong-rust

./: Cargo.toml  script.nsi
.github/workflows/: build.yml
