[package]
name = "pong"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy_asset_loader = "0.22.0"
bevy_audio = "0.16.0"
bevy_collision = "0.0.1"
bevy_prototype_lyon = "0.13.0"
bevy_rapier2d = "0.29.0"
bevy_sprite = "0.16.0"
bevy_tweening = "0.12.0"
crossbeam = "0.8.4"
nalgebra = "0.33.2"
serde = "1.0.219"
shrev = "1.1.3"
tokio = "1.44.2"
